# azlpChat

./: .gitignore  README.md
StatusServer/: StatusServer.slnx
StatusServer/StatusServer/: Grpc_Client.cpp  Grpc_Client.h  RedisMgr.cpp  StatusServer.cpp  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServerImpl.cpp  StatusServerImpl.h  const.h  message.grpc.pb.cc  message.proto
azchat/: CMakeLists.txt  addfriend_dlg.cpp  addfriend_dlg.h  addfriend_dlg.ui  adduseritem.cpp  adduseritem.h  adduseritem.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  bubble_frame.cpp  bubble_frame.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlable.cpp  clickedlable.h  clickedoncelb.cpp  clickedoncelb.h  contactlist.cpp  contactlist.h  conuseritem.cpp  conuseritem.h  conuseritem.ui  customizeedit.cpp  customizeedit.h  (+65 more)
azchat/style/: stylesheet.qss
azchat_-gateserver/: AZChat_Gateserver.cpp  AZChat_Gateserver.sln  AZChat_Gateserver.vcxproj  AZChat_Gateserver.vcxproj.filters  Asio_iocontext_pool.cpp  Asio_iocontext_pool.h  CServer.cpp  CServer.h  ConfigMgr.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDAO.cpp  MysqlDAO.h  MysqlMgr.cpp  MysqlMgr.h  PropertySheet.props  PropertySheet1.props  RedisMgr.h  Status_Client.cpp  Status_Client.h  Varify_Client.cpp  Varify_Client.h  const.h  message.grpc.pb.h  message.pb.cc  message.pb.h  proto_gen.bat  single.h
chatserver/: chatserver.slnx
chatserver/chatserver/: AsioContextPool.cpp  AsioContextPool.h  CSession.cpp  CSession.h  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  Cserver.cpp  Cserver.h  Data.h  Grpc_Client.cpp  Grpc_Client.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDAO.cpp  MysqlDAO.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Status_Client.cpp  Status_Client.h  UserMgr.cpp  UserMgr.h  chatserver.cpp  chatserver.vcxproj  chatserver.vcxproj.filters  const.h  message.pb.cc  message.pb.h  message.proto  test.txt
varify_server/: config.json  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
